# armando

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  Makefile  README.md  RELEASES.md  SHORTCUTS.md  STRUCTURE.md  VISUAL_REGRESSION.md  generic-prompts.yaml  prompt-tags.yaml  setup_hotkey.sh  sonar-project.properties
.ai/: ARCHITECTURE.md  CODEX_SKILL_EVALUATION.md  CONTRIBUTING.md  PRODUCT.md  README.md  REFACTOR_COORDINATION_PLAN.md  ROADMAP.md  RUST_GUIDE_FOR_JAVA_PYTHON.md  STATUS.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml  sonar.yml
.test-doc-rag/: 00-overview.md
.test-doc-rag/docs/: architecture.xml
.test-doc-rag/legacy/: manual.doc
.test-doc-rag/notes/: faq.txt
.test-doc-rag/src/: SampleService.java  sample.py
assets/: armando.desktop
configs/: beta.yaml  default.yaml  local.yaml  personal.yaml  work.yaml
configs/prompts/: generic-prompts.yaml  prompt-tags.yaml
docker/: test-runner.Dockerfile
docs/: README.md
docs/getting-started/: install.md
docs/guides/: releases.md  shortcuts.md
docs/media/: README.md
docs/reference/: repository-structure.md
locales/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  ja.yaml  zh.yaml
scripts/: bootstrap-release.sh  export-clippy-sonar-report.sh  export-rust-coverage.sh  extract_cargo_test_executables.py  install-local.sh  lcov_to_sonar_coverage.py  package-release.sh  pre-release-check.sh  release-install.ps1  release-install.sh  run-container-tests.sh  run-sonar-local.sh  start-sonar-local.sh  verify-changelog-version.sh  verify-release-version.sh
scripts/ci/: pre-push-regression.sh  run-container-tests.sh  verify-ui-smoke-checklist.sh
scripts/dev/: install-local.sh  run-sonar-local.sh  start-sonar-local.sh
scripts/quality/: clippy_json_to_sonar_issues.py  (+2 more)
src/: app_paths.rs  config.rs  daemon.rs  gui.rs  history.rs  i18n.rs  lib.rs  logging.rs  main.rs  prompt_profiles.rs  rag.rs  theme.rs  update.rs  window_context.rs
tests/: config_integration.rs  packaging_integration.rs  rag_retrieval.rs  resources_integration.rs
themes/: default-dark.yaml  magi.yaml  nerv-hud.yaml  nerv-magi-system.yaml
(+51 files in other folders)
