[package]
name = "armando"
version = "0.0.2-rc5"
edition = "2021"

[[bin]]
name = "armando"
path = "src/bin/app.rs"

[dependencies]
eframe = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
arboard = "3.3"
anyhow = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["formatting", "parsing"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
resvg = "0.43"
rusqlite = { version = "0.32", features = ["bundled"] }
pdf-extract = "0.7"
calamine = "0.26"
walkdir = "2.5"
zip = "2.2"
dotenvy = "0.15"
